# DeepLearningModal

./: .gitignore  Ideas.md  README.md  notes.md  pyproject.toml  submission.csv
src/: create_submission.py  evaluate.py  train.py
src/configs/: config.yaml
src/configs/data/: default.yaml
src/configs/experiment/: baseline_from_scratch.yaml  baseline_pretrained.yaml  trackA_transformer.yaml
src/configs/model/: Acnn_midfusion.yaml  Acnn_midfusion_tiny.yaml  Atemporal_shift.yaml  Atemporal_shift_efficient.yaml  Ax3d.yaml  Bstudent_teacher_mae.yaml  Bswin.yaml  Btimesformer.yaml  BvideoMAE.yaml  Bx3d.yaml  cnn_1DT.yaml  cnn_3d.yaml  cnn_attention.yaml  cnn_diff.yaml  cnn_lstm.yaml  one_block_transformer.yaml  swin.yaml
src/configs/train/: default.yaml
src/dataset/: __init__.py  video_dataset.py
src/models/: cnn_1dtemp.py  cnn_2plus1.py  cnn_3d.py  cnn_attention.py  cnn_baseline.py  cnn_diff.py  cnn_lstm.py  cnn_mixed_conv.py  swin.py  swin_from_scratch.py  transformer.py
src/models/TrackA/: cnn_midfusion.py  temporal_shift_cnn.py  temporal_shift_efficient_net.py  tiny_midfusion.py
src/models/TrackB/: TeacherStudent.py  swin.py  timesformer.py  videoMAE.py  x3d.py
